--- a/conc_gui/dynamicTables/index.html
+++ b/conc_gui/dynamicTables/index.html
@@ -51,7 +51,7 @@
   </head>
   <body>
     <div class="flex h-screen" outline-1 >
-      <div class="w-1/6 divide-y-2 divide-blue-400">
+      <div id="userResults" class="w-1/6 divide-y-2 divide-blue-400">
         <div class="row">
           <div class="column" style="background-color: rgb(92, 43, 226);">
             <h2>X</h2>
