--- a/conc_gui/dynamicTables/index.html
+++ b/conc_gui/dynamicTables/index.html
@@ -83,6 +83,7 @@
             
           </tbody>
         </table>
+        <button id="addPolyBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 p-10 rounded-full">Add Conc to Scene</button>
       </div>
     <div class="w-5/6" id="concGui">
       <canvas></canvas>
